test/corpus/do_while.txt
===================
Do While
===================
Sub Test()
    Dim x As Integer
    x = 1
    Do While x < 10
        x = x + 1
    Loop
End Sub
---
(source_file
  (sub_statement
    (identifier)
    (block
      (dim_statement
        (identifier)
        (type
          (identifier)
        )
      )
      (expression
        (binary_expression
          (expression
            (primary_expression
              (identifier)
            )
          )
          (expression
            (primary_expression
              (number_literal)
            )
          )
        )
      )
      (do_statement
        (expression
          (binary_expression
            (expression
              (primary_expression
                (identifier)
              )
            )
            (expression
              (primary_expression
                (number_literal)
              )
            )
          )
        )
        (block
          (expression
            (binary_expression
              (expression
                (binary_expression
                  (expression
                    (primary_expression
                      (identifier)
                    )
                  )
                  (expression
                    (primary_expression
                      (identifier)
                    )
                  )
                )
              )
              (expression
                (primary_expression
                  (number_literal)
                )
              )
            )
          )
        )
      )
    )
  )
)
