test/corpus/select_case.txt
===================
Select Case
===================
Sub Test(x As Integer)
    Select Case x
        Case 1
            MsgBox "One"
        Case Else
            MsgBox "Other"
    End Select
End Sub
---
(source_file
  (sub_statement
    (identifier)
    (identifier)
    (type
      (identifier)
    )
    (block
      (select_case_statement
        (expression
          (primary_expression
            (identifier)
          )
        )
        (case_clause
          (expression
            (primary_expression
              (number_literal)
            )
          )
          (block
            (expression
              (primary_expression
                (identifier)
              )
            )
            (expression
              (primary_expression
                (string_literal)
              )
            )
          )
        )
        (block
          (expression
            (primary_expression
              (identifier)
            )
          )
          (expression
            (primary_expression
              (string_literal)
            )
          )
        )
      )
    )
  )
)
